--- a/mfpconfig/app_config.json
+++ b/mfpconfig/app_config.json
@@ -6,7 +6,7 @@
         "clientPlatform": "android",
         "packageName": "com.demo.push"
       },
-      "displayName": "DemoAppB",
+      "displayName": "NativeAndroid",
       "scopeElementMapping": {
         "push.mobileclient": "",
         "liveupdate.mobileclient": ""
