--- a/mfpconfig/server_config.json
+++ b/mfpconfig/server_config.json
@@ -2,8 +2,8 @@
     "mfp" : {
         "name": "test",
         "protocol": "http",
-        "host": "mobilefoundation.icpademo-c33bf0f22ab59313b3628c493e016b88-0000.us-south.containers.appdomain.cloud",
+        "host": "storefront-mf-default.charanocptile-c33bf0f22ab59313b3628c493e016b88-0000.us-south.containers.appdomain.cloud",
         "port": "80",
-        "servercred": "admin:admin"
+        "servercred": "demo:demo"
     }
 }
