--- a/mfpconfig/server_config.json
+++ b/mfpconfig/server_config.json
@@ -2,7 +2,7 @@
     "mfp" : {
         "name": "test",
         "protocol": "http",
-        "host": "storefront-mf-default.charanocptile-c33bf0f22ab59313b3628c493e016b88-0000.us-south.containers.appdomain.cloud",
+        "host": "192.168.0.1",
         "port": "80",
         "servercred": "admin:admin"
     }
