--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,9 @@ android {
     }
     
     buildTypes {
-        debug {
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-            debuggable false
-            jniDebugBuild false
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     
