--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,19 @@ android {
         versionCode 1
         versionName "1.0.0"
     }
+    signingConfigs {
+    	release {
+            if (project.hasProperty('RELEASE_KEY_STORE_FILE')) {
+                storeFile file(RELEASE_KEY_STORE_FILE)
+            	storePassword RELEASE_KEY_STORE_PASSWORD
+                keyAlias RELEASE_KEY_ALIAS
+                keyPassword RELEASE_KEY_PASSWORD
+            }
+    	}        
+    }
     buildTypes {
         release {
+	        signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
