--- a/mfpconfig/server_config.json
+++ b/mfpconfig/server_config.json
@@ -2,8 +2,8 @@
     "mfp" : {
         "name": "test",
         "protocol": "http",
-        "host": "mobilefoundation.srihari-dal10-b3c-32x128-c33bf0f22ab59313b3628c493e016b88-0000.us-south.containers.appdomain.cloud",
+        "host": "mobilefoundation.apps.shuteye.os.fyre.ibm.com",
         "port": "80",
-        "servercred": "admin:admin"
+        "servercred": "admin:nVSMA2VlvCu7BE1LHF26uNxum"
     }
 }
